--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -18,6 +18,10 @@
   }
 }
 
+.menu-toggle {
+  display: none;
+}
+
 .main-nav__list,
 .contact__list {
   display: flex;
@@ -108,7 +112,7 @@
   .header {
     padding: 0 15px;
 
-    &__logo{
+    &__logo {
       font-size: 24px;
     }
   }
@@ -137,5 +141,19 @@
   .header {
     height: 60px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .js-open-menu{
+    display: block;
+    position: absolute;
+    border: none;
+    right: 15px;
+    background-color: white;
+    cursor: pointer;
+
+    &:hover > svg,
+    &:focus > svg{
+      fill: map-get($colors,brand-blue );
+    }
   }
 }
