--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,6 +17,7 @@
 @import './components/team-section';
 @import './components/clients-section';
 @import './components/footer';
+@import './components/mobile-menu';
 @import './components/portfolio';
 
 
