--- a/css/main.css
+++ b/css/main.css
@@ -142,11 +142,21 @@ img {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (max-width: 1199px) {
+  .modal {
+    width: 450px;
+  }
+}
 .container-form {
   margin: 40px;
   width: auto;
-  height: 500px;
-  display: block;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  border: 1px solid tomato;
 }
 
 .form-header {
@@ -278,6 +288,11 @@ label .link:focus {
           justify-content: center;
 }
 
+@media screen and (max-width: 1199px) {
+  .container-form {
+    max-width: 528px;
+  }
+}
 .visually-hidden {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
