--- a/sass/components/_form-modal.scss
+++ b/sass/components/_form-modal.scss
@@ -1,8 +1,11 @@
 .container-form {
   margin: 40px;
   width: auto;
-  height: 500px;
-  display: block;
+  height: auto;
+  // display: block;
+  display: flex;
+  flex-wrap: wrap;
+  border: 1px solid tomato;
 }
 
 .form-header {
@@ -111,4 +114,11 @@ label .link:focus {
   width: 100%;
   display: flex;
   justify-content: center;
+}
+
+@media screen and (max-width: 1199px) {
+  .container-form {
+    max-width: 528px;
+    // width: 100%;
+  }
 }
