--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -5,9 +5,11 @@
 
   &__container {
     @include container();
+    flex-wrap: wrap;
 
     &__box:not(:last-child) {
       margin-right: 78px;
+      //flex-basis: calc((100% - 156px) / 5);
     }
 
     &__header {
@@ -136,10 +138,6 @@
 }
 
 @media screen and (max-width: 1199px) {
-  .button {
-    margin-left: 100px;
-  }
-
   .footer {
     &__container {
       padding-left: 76px;
@@ -147,14 +145,16 @@
       justify-content: center;
 
       &__box {
-        // align-items: center;
-        flex-basis: calc(100% / 3);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         border: 1px solid green;
       }
     }
 
     &__logo {
-      text-align: center;
+      margin: 0;
       font-size: 24px;
       line-height: 28px;
     }
@@ -174,13 +174,17 @@
       }
     }
   }
+
+  .button {
+    margin: 0;
+  }
 }
 
 @media screen and (max-width: 767px) {
   .footer {
     &__container {
-        align-items: center;
-        justify-content: center;
+      align-items: center;
+      justify-content: center;
       &__box {
         margin-bottom: 60px;
       }
