--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,4 +1,4 @@
-@media screen and (min-width: 768) {
+@media screen and (min-width: 768px) {
   .menu-container {
     display: none;
     opacity: 0;
