portfolio responsive design
added mobile menu to portfolio,
added responsive design

--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -133,5 +133,10 @@
     padding-right: 10px;
     border-right: 1px solid map-get($colors, brand-blue);
     cursor: pointer;
+
+    &:hover,
+    &:focus{
+      text-decoration: underline 2px;
+    }
   }
 }
