--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ img {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button {
+.button, .footer__form-button {
   width: 200px;
   height: 50px;
   background-color: #2196f3;
@@ -76,7 +76,7 @@ img {
   letter-spacing: 0.06em;
   cursor: pointer;
 }
-.button:hover, .button:focus {
+.button:hover, .footer__form-button:hover, .button:focus, .footer__form-button:focus {
   -webkit-box-shadow: inset 0px 0px 41px 0px rgb(0, 0, 0);
   box-shadow: inset 0px 0px 41px 0px rgb(0, 0, 0);
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -169,7 +169,7 @@ img {
 }
 
 .input {
-  width: 448px;
+  width: 100%;
   height: 40px;
   border: none;
   outline: 1px solid rgba(33, 33, 33, 0.2);
@@ -852,8 +852,12 @@ label .link:focus {
         flex-basis: calc((100% - 30px) / 2);
     -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    max-height: 536px;
-    max-width: 354px;
+  }
+  .socials__list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 10px;
   }
 }
 @media screen and (max-width: 767px) {
@@ -862,8 +866,6 @@ label .link:focus {
         flex-basis: 100%;
     -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    max-height: 622px;
-    max-width: 450px;
   }
 }
 .clients {
@@ -1140,7 +1142,7 @@ label .link:focus {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-.footer .button {
+.footer__form-button {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -1151,24 +1153,10 @@ label .link:focus {
       -ms-flex-pack: center;
           justify-content: center;
   margin-left: 12px;
-  width: 200px;
-  height: 50px;
-  background-color: #2196f3;
-  color: #fff;
   fill: #fff;
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-color: #2196f3;
-  border-radius: 4px;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 30px;
-  letter-spacing: 0.06em;
   cursor: pointer;
 }
-.footer .button__send-icon {
+.footer__form-button__send-icon {
   margin-left: 24px;
 }
 
@@ -1197,13 +1185,44 @@ label .link:focus {
             align-items: center;
     border: 1px solid green;
   }
+  .footer__container__box:last-child {
+    margin-top: 60px;
+  }
+  .footer__container__address {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
   .footer__logo {
     margin: 0;
+    margin-bottom: 20px;
     font-size: 24px;
     line-height: 28px;
   }
-  .footer__header {
-    text-align: center;
+  .footer__form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .footer__form__header {
     text-align: center;
@@ -1212,12 +1231,21 @@ label .link:focus {
     margin-bottom: 20px;
     width: 450px;
   }
-  .button {
+  .footer__form__button {
     margin: 0;
   }
 }
 @media screen and (max-width: 767px) {
+  .footer {
+    padding-bottom: 0;
+  }
   .footer__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 0;
+    padding: 0;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -1227,6 +1255,12 @@ label .link:focus {
   }
   .footer__container__box {
     margin-bottom: 60px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 @media screen and (min-width: 768px) {
@@ -1359,6 +1393,10 @@ label .link:focus {
     border-right: 1px solid #2196f3;
     cursor: pointer;
   }
+  .mobile-socials__item:hover, .mobile-socials__item:focus {
+    -webkit-text-decoration: underline 2px;
+            text-decoration: underline 2px;
+  }
 }
 .products {
   margin-top: 94px;
@@ -1428,8 +1466,6 @@ label .link:focus {
       flex-basis: calc((100% - 60px) / 3);
 }
 .products__card {
-  width: 370px;
-  height: 404px;
   border: 1px solid #eeeeee;
 }
 .products__card:hover, .products__card:focus {
@@ -1442,14 +1478,14 @@ label .link:focus {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  margin-top: 20px;
-  margin-left: 20px;
+  margin: 20px 0 20px 20px;
 }
 .products__card__description__title {
   font-weight: 700;
   font-size: 18px;
   line-height: 36px;
   color: #000;
+  padding-bottom: 4px;
 }
 .products__card__description__name {
   -webkit-box-pack: end;
