--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -9,7 +9,6 @@
 
     &__box:not(:last-child) {
       margin-right: 78px;
-      //flex-basis: calc((100% - 156px) / 5);
     }
 
     &__header {
@@ -108,31 +107,19 @@
         color: map-get($colors, footer-link);
       }
     }
-  }
 
-  .button {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 12px;
-    width: 200px;
-    height: 50px;
-    background-color: map-get($colors, brand-blue);
-    color: map-get($colors, white-color);
-    fill: map-get($colors, white-color);
-    box-shadow: 0px 4px 4px map-get($colors, box-shadow);
-    border-color: map-get($colors, brand-blue);
-    border-radius: 4px;
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 30px;
-    letter-spacing: 0.06em;
-    cursor: pointer;
+    &-button {
+      @extend .button;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      margin-left: 12px;
+      fill: map-get($colors, white-color);
+      cursor: pointer;
 
-    &__send-icon {
-      margin-left: 24px;
+      &__send-icon {
+        margin-left: 24px;
+      }
     }
   }
 }
@@ -151,19 +138,33 @@
         align-items: center;
         border: 1px solid green;
       }
+
+      &__box:last-child {
+          margin-top: 60px;
+      }
+
+      &__address {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+
     }
 
     &__logo {
       margin: 0;
+      margin-bottom: 20px;
       font-size: 24px;
       line-height: 28px;
     }
 
-    &__header {
-      text-align: center;
-    }
-
     &__form {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
       &__header {
         text-align: center;
       }
@@ -172,21 +173,29 @@
         margin-bottom: 20px;
         width: 450px;
       }
-    }
-  }
 
-  .button {
-    margin: 0;
+      &__button {
+        margin: 0;
+      }
+    }
   }
 }
 
 @media screen and (max-width: 767px) {
   .footer {
+    padding-bottom: 0;
+
     &__container {
+      flex-direction: column;
+      margin: 0;
+      padding: 0;
       align-items: center;
       justify-content: center;
+
       &__box {
         margin-bottom: 60px;
+        align-items: center;
+        justify-content: center;
       }
     }
   }
