--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -23,8 +23,6 @@
   }
 
   &__card {
-    width: 370px;
-    height: 404px;
     border: 1px solid map-get($colors, border);
 
     &:hover,
@@ -36,14 +34,14 @@
 
     &__description {
       flex-grow: 1;
-      margin-top: 20px;
-      margin-left: 20px;
+      margin: 20px 0 20px 20px;
 
       &__title {
         font-weight: 700;
         font-size: 18px;
         line-height: 36px;
         color: map-get($colors, black-color);
+        padding-bottom: 4px;
       }
 
       &__name {
