--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -97,8 +97,13 @@
     &__item {
       flex-basis: calc((100% - 30px) / 2);
       transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-      max-height: 536px;
-      max-width: 354px;
+    }
+  }
+
+  .socials {
+    &__list {
+      justify-content: center;
+      gap: 10px;
     }
   }
 }
@@ -108,8 +113,6 @@
     &__item {
       flex-basis: calc(100% / 1);
       transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-      max-height: 622px;
-      max-width: 450px;
     }
   }
 }
