borders turned off
borders turned off

--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -17,7 +17,7 @@
   flex-direction: $flex-direction;
   justify-content: $justify;
   align-items: $align;
-  border: 1px solid tomato;
+  // border: 1px solid tomato;
 }
 
 @mixin link(
