--- a/css/main.css
+++ b/css/main.css
@@ -156,7 +156,6 @@ img {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  border: 1px solid tomato;
 }
 
 .form-header {
@@ -208,28 +207,15 @@ input:focus + svg {
 .comment textarea {
   resize: none;
   height: 120px;
-  width: 448px;
+  width: 100%;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding: 12px 16px;
 }
 
 .policy-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
   margin-bottom: 30px;
   margin-top: 20px;
-}
-
-.modal-form-policy-text {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
 }
 
 .modal-form-policy-text::before {
@@ -1007,9 +993,9 @@ label .link:focus {
           align-items: stretch;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-}
-.footer__container__box:not(:last-child) {
-  margin-right: 78px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .footer__container__header {
   margin-bottom: 20px;
@@ -1086,7 +1072,7 @@ label .link:focus {
   text-transform: uppercase;
 }
 .footer__form__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3019607843);
   background-color: #2f303a;
@@ -1218,9 +1204,6 @@ label .link:focus {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
   }
   .footer__logo {
     margin: 0;
