--- a/sass/components/_form-modal.scss
+++ b/sass/components/_form-modal.scss
@@ -5,7 +5,6 @@
   // display: block;
   display: flex;
   flex-wrap: wrap;
-  border: 1px solid tomato;
 }
 
 .form-header {
@@ -50,22 +49,24 @@ input:focus + svg {
 .comment textarea {
   resize: none;
   height: 120px;
-  width: 448px;
+  width: 100%;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding: 12px 16px;
 }
 
 .policy-container {
-  display: flex;
-  align-items: center;
-  text-align: center;
+  // display: flex;
+  // justify-content: center;
+  // display: inline-block;
+  // // align-items: center;
+  // // text-align: center;
   margin-bottom: 30px;
   margin-top: 20px;
 }
 
 .modal-form-policy-text {
-  display: inline-flex;
+  // display: flex;
 }
 
 .modal-form-policy-text::before {
@@ -119,6 +120,5 @@ label .link:focus {
 @media screen and (max-width: 1199px) {
   .container-form {
     max-width: 528px;
-    // width: 100%;
   }
 }
