fix header in footer box
fix header in footer box

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -131,8 +131,7 @@
       &__box {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        text-align: center;
         border: 1px solid green;
       }
 
