--- a/css/main.css
+++ b/css/main.css
@@ -216,10 +216,15 @@ input:focus + svg {
 .policy-container {
   margin-bottom: 30px;
   margin-top: 20px;
+  width: 100%;
+}
+
+.modal-form-policy-text {
+  width: 100%;
 }
 
 .modal-form-policy-text::before {
-  display: block;
+  display: inline-block;
   content: "";
   width: 16px;
   height: 16px;
@@ -230,12 +235,11 @@ input:focus + svg {
 }
 
 .modal-form-policy:checked + .modal-form-policy-text::before {
-  border: none;
   background-image: url("../images/icon-check.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-color: #2196f3;
-  outline: 1px solid #2196f3;
+  outline: none;
 }
 
 .visually-hidden {
