--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -149,7 +149,7 @@
         display: flex;
         flex-direction: column;
         text-align: center;
-        border: 1px solid green;
+        //border: 1px solid green;
       }
 
       &__box:last-child {
@@ -182,7 +182,7 @@
 
       &__input {
         margin-bottom: 20px;
-        width: 450px;
+        width: 100%;
       }
 
       &__button {
