--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -136,24 +136,21 @@
   .footer__form-input-container {
     display: flex;
     flex-direction: column;
-    // justify-content: center;
     align-items: center;
   }
   .footer {
     &__container {
       padding-left: 76px;
       flex-wrap: wrap;
-      justify-content: center;
+      
 
       &__box {
         display: flex;
         flex-direction: column;
+        align-items: center;
         text-align: center;
-        //border: 1px solid green;
-      }
-
-      &__box:last-child {
-        margin-top: 60px;
+        flex-basis: calc((100% - 120px) / 3);
+        // border: 1px solid green;
       }
 
       &__address {
@@ -182,10 +179,9 @@
 
       &__input {
         margin-bottom: 20px;
-        width: 100%;
       }
 
-      &__button {
+      &-button {
         margin: 0;
       }
     }
