--- a/sass/components/_form-modal.scss
+++ b/sass/components/_form-modal.scss
@@ -116,5 +116,6 @@ label .link:focus {
 @media screen and (max-width: 1199px) {
   .container-form {
     max-width: 528px;
+    margin: 40px 10px;
   }
 }
