--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ img {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 528px;
+  max-width: 528px;
   min-height: 581px;
   background-color: #fff;
 }
@@ -144,7 +144,19 @@ img {
 
 @media screen and (max-width: 1199px) {
   .modal {
-    width: 450px;
+    min-width: 320px;
+    max-width: 450px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 100%;
+  }
+}
+@media screen and (max-width: 480px) {
+  .modal {
+    margin: 0;
   }
 }
 .container-form {
@@ -281,6 +293,7 @@ label .link:focus {
 @media screen and (max-width: 1199px) {
   .container-form {
     max-width: 528px;
+    margin: 40px 10px;
   }
 }
 .visually-hidden {
@@ -1199,6 +1212,9 @@ label .link:focus {
     padding-left: 76px;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .footer__container__box {
     display: -webkit-box;
@@ -1212,8 +1228,13 @@ label .link:focus {
         -ms-flex-align: center;
             align-items: center;
     text-align: center;
-    -ms-flex-preferred-size: calc((100% - 120px) / 3);
-        flex-basis: calc((100% - 120px) / 3);
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+    width: 100%;
+    border: 1px solid green;
+  }
+  .footer__container__box:last-child {
+    margin-top: 60px;
   }
   .footer__container__address {
     display: -webkit-box;
@@ -1253,6 +1274,8 @@ label .link:focus {
   }
   .footer__form__input {
     margin-bottom: 20px;
+    max-width: 450px;
+    width: 100%;
   }
   .footer__form-button {
     margin: 0;
@@ -1284,6 +1307,9 @@ label .link:focus {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+  .footer__container__box:last-child {
+    margin-top: 0;
   }
 }
 @media screen and (min-width: 768px) {
