--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -141,6 +141,7 @@
   .footer {
     &__container {
       padding-left: 76px;
+      flex-wrap: wrap;
       justify-content: center;
 
       &__box {
@@ -148,10 +149,17 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
-        justify-content: center;
-        // flex-basis: calc(100% / 2);
-        // border: 1px solid green;
+        // justify-content: center;
+        flex-basis: calc(100% / 2);
+        width: 100%;
+        border: 1px solid green;
+
+        &:last-child {
+          margin-top: 60px;
+        }
       }
+
+      
 
       &__address {
         display: flex;
@@ -205,6 +213,10 @@
         margin-bottom: 60px;
         align-items: center;
         justify-content: center;
+
+        &:last-child {
+          margin-top: 0;
+        }
       }
     }
   }
