--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -188,6 +188,7 @@
       &__input {
         margin-bottom: 20px;
         max-width: 450px;
+        min-width: 300px;
         width: 100%;
       }
 
