--- a/css/main.css
+++ b/css/main.css
@@ -157,6 +157,7 @@ img {
 @media screen and (max-width: 480px) {
   .modal {
     margin: 0;
+    min-height: 650px;
   }
 }
 .container-form {
@@ -506,6 +507,11 @@ label .link:focus {
     fill: #2196f3;
   }
 }
+@media screen and (max-width: 480px) {
+  .header {
+    padding: 0;
+  }
+}
 .slider {
   height: 600px;
   width: 100%;
@@ -587,7 +593,7 @@ label .link:focus {
   margin-top: 94px;
   margin-bottom: 94px;
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 400px) and (max-width: 1199px) {
   .strengths {
     margin-left: 15px;
     margin-right: 15px;
@@ -682,7 +688,7 @@ label .link:focus {
   margin-top: 94px;
   margin-bottom: 94px;
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 400px) and (max-width: 1199px) {
   .services {
     margin-left: 15px;
     margin-right: 15px;
@@ -758,7 +764,7 @@ label .link:focus {
   margin-top: 94px;
   margin-bottom: 94px;
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 400px) and (max-width: 1199px) {
   .team {
     margin-left: 15px;
     margin-right: 15px;
@@ -895,7 +901,7 @@ label .link:focus {
   margin-top: 94px;
   margin-bottom: 94px;
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 400px) and (max-width: 1199px) {
   .clients {
     margin-left: 15px;
     margin-right: 15px;
@@ -1281,6 +1287,9 @@ label .link:focus {
   }
 }
 @media screen and (max-width: 767px) {
+  .footer__form-input-container {
+    width: 100%;
+  }
   .footer {
     padding-bottom: 0;
   }
@@ -1452,7 +1461,7 @@ label .link:focus {
   margin-top: 94px;
   margin-bottom: 94px;
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 400px) and (max-width: 1199px) {
   .products {
     margin-left: 15px;
     margin-right: 15px;
