--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -2,7 +2,7 @@
   margin-top: $top;
   margin-bottom: $bottom;
 
-  @media screen and (max-width: 1199px) {
+  @media screen and (min-width: 400px) and (max-width: 1199px){
     margin-left: 15px;
     margin-right: 15px;
   }
